--- a/package.json
+++ b/package.json
@@ -5,18 +5,31 @@
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
+    "androidClean": "react-native start --reset-cache",
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "expo": "~48.0.18",
+    "expo-constants": "~14.2.1",
+    "expo-linking": "~4.0.1",
+    "expo-router": "^1.0.0",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.71.8",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.0.27",
+    "@types/react-native": "^0.72.2",
+    "tw-colors": "^1.2.6",
+    "typescript": "^4.9.4"
   },
   "private": true
 }
